# roxide

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  config.toml  flake.nix  justfile  logrun.sh  run.sh
.github/: dependabot.yml  script.sh
.github/workflows/: ci.yml  miri.yml  release.yml  test.yml  tests.yml  tests_deps.yml
completions/: _roxide  roxide.bash  roxide.elv  roxide.fish
contrib/completions/: _rozide  rozide.bash  rozide.elv  rozide.fish
docs/: config.toml  help_footer.md
nix/dev/: flake.nix  shell.nix
nix/release/: default.nix  home-module.nix  module.nix  stable.nix
src/: args.rs  checks.rs  config.rs  core.rs  errors.rs  garbage_collection.rs  history.rs  lib.rs  log.rs  macros.rs  main.rs  pattern.rs  remove.rs  revert.rs  utils.rs  utils_core.rs  wild_cards.rs
src/core/: args.rs  check.rs  checks.rs  config.rs  error.rs  filter.rs  gc.rs  helpers.rs  history.rs  macros.rs  mod.rs  rm.rs  trash.rs  utils.rs
src/utils/: config.rs
tests/: core.rs  filter.rs  gc.rs  interactive_prompts.rs  lock_file.rs  logs.rs  remove.rs  test.rs
