[package]
name = "roxide"
version = "0.2.21"
license = "MIT"
authors = ["Abhinandh S <abhinandhsuby@proton.me>"]
categories = ["command-line-utilities", "filesystem"]
description = "A better rm command for your terminal"
homepage = "https://github.com/abhi-xyz/roxide"
repository = "https://github.com/abhi-xyz/roxide"
keywords = ["cli", "filesystem", "shell", "tool", "utility"]
readme = "README.md"
edition = "2021"

[badges]
maintenance = { status = "actively-developed" }

# [[bin]]
# bench = false
# path = "src/main.rs"
# name = "roxide"

# [[bin]]
# bench = false
# path = "src/main.rs"
# name = "r"

[features]
default = []
extra_commands = []
extra_errors = []
dev = []

[dependencies]
chrono = "0.4.39"
clap = { version = "4.5.23", features = ["derive"] }
dirs = "5.0.1"
env_logger = "0.11.6"
# cfg-if = { git = "https://github.com/rust-lang/cfg-if/" }
glob = "0.3.2"
log = "0.4.22"
serde = { version = "1.0.217", features = ["derive"] }
toml = "0.8.19"
walkdir = "2.5.0"
sha2 = "0.10.8"

[dev-dependencies]
anyhow = "1.0.95"
tempdir = "0.3.7"
pretty_assertions = "1.4.1"

[build-dependencies]
clap = { version = "4.5.23", features = ["derive"] }
clap_complete = "4.5.40"

[profile.release]
panic = 'abort'
codegen-units = 1
opt-level = 'z'
lto = true
debug = "none"
strip = "symbols"
debug-assertions = false
overflow-checks = false
