[package]
name = "roxide"
version = "0.2.21"
license = "MIT"
authors = ["Abhinandh S <abhinandhsuby@proton.me>"]
categories = ["command-line-utilities", "filesystem"]
description = "A better rm command for your terminal"
homepage = "https://github.com/abhi-xyz/roxide"
repository = "https://github.com/abhi-xyz/roxide"
keywords = ["cli", "filesystem", "shell", "tool", "utility"]
readme = "README.md"
edition = "2021"

[badges]
maintenance = { status = "actively-developed" }

[[bin]]
bench = false
path = "src/main.rs"
name = "roxide"

[[bin]]
bench = false
path = "src/main.rs"
name = "r"

[features]
default = []
extra_commands = []
extra_errors = []
dev = []

[dependencies]
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
derive_builder = "0.20.2"
dirs = "6.0"
env_logger = "0.11"
serde_json = "1.0"
thiserror = "2.0"
# cfg-if = { git = "https://github.com/rust-lang/cfg-if/" }
glob = "0.3"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
walkdir = "2.5"
sha2 = "0.10"
anyhow = "1.0"
miette = { version = "7.6.0", features = ["fancy"] }

[dev-dependencies]
anyhow = "1.0"
tempdir = "0.3"
pretty_assertions = "1.4"

[build-dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"

[profile.release]
panic = 'abort'
codegen-units = 1
opt-level = 'z'
lto = true
debug = "none"
strip = "symbols"
